--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -30,6 +30,8 @@ libc = "0.2"
 chrono = "0.4.9"
 #log = { version = "0.4", features = ["std"] }
 harfbuzz-sys = {version = "^0.3", default-features = false}
+euclid = "0.20.3"
+freetype = "0.4.1"
 
 [dependencies.font-kit]
 version = "0.4.0"
